--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@adaptabletools/adaptable-react-aggrid": "12.0.1",
     "@adaptabletools/adaptable-plugin-finance": "12.0.1",
+    "@adaptabletools/adaptable-react-aggrid": "12.0.1",
     "@ag-grid-community/react": "27.3.0",
     "@ag-grid-enterprise/all-modules": "27.3.0",
+    "@finsemble/finsemble-core": "^7.2.0-beta.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^12.0.0",
