--- a/package.json
+++ b/package.json
@@ -22,13 +22,8 @@
     "@ag-grid-enterprise/sparklines": "30.0.6",
     "@ag-grid-enterprise/status-bar": "30.0.6",
     "@finsemble/finsemble-core": "^8.0.1",
-    "@types/node": "^16.11.42",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,6 +51,10 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "prettier": "^3.0.1",
+    "react-scripts": "5.0.1",
+    "typescript": "4.6.4",
+    "@types/react": "18.0.1",
+    "@types/react-dom": "18.0.6"
   }
 }
